--- a/wp-content/themes/external-blogg/stylesheets/loop.scss
+++ b/wp-content/themes/external-blogg/stylesheets/loop.scss
@@ -19,14 +19,10 @@
     .entry-meta {
       @include columns(3);
       font-family: $sansSerif;
-      font-size: 1em;
+      font-size: emize(12);
       .author {
         margin-bottom: .2em;
         color: $linkColor;
-        font-size: emize(12);
-      }
-      time {
-        font-size: emize(12);
       }
       .avatar {
         margin-top: .2em;
@@ -46,5 +42,15 @@
     a:hover {
       text-decoration: none;
     }
+  }
+}
+ul.pagination {
+  margin: 1em 0;
+  padding: 0;
+  li {
+    display: inline-block;
+    font-family: $sansSerif;
+    font-size: emize(14);
+    margin: 0 .5em 0 0;
   }
 }
