Renamed css file for posts

--- a/wp-content/themes/external-blogg/stylesheets/application.scss
+++ b/wp-content/themes/external-blogg/stylesheets/application.scss
@@ -2,7 +2,7 @@
 @import 'mixins';
 @import 'functions';
 @import 'base';
-@import 'post';
+@import 'single';
 @import 'loop';
 @import 'aside';
 @import 'media-queries';
