--- a/wp-content/themes/external-blogg/stylesheets/application.css
+++ b/wp-content/themes/external-blogg/stylesheets/application.css
@@ -28,6 +28,55 @@ aside {
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
+h1.body-copy {
+  font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif;
+  font-weight: normal;
+  font-size: 2.25em;
+  line-height: 1.11111em;
+  margin: 0 0 .3em; }
+
+h2.body-copy {
+  font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif;
+  font-weight: normal;
+  font-size: 1.5em;
+  line-height: 1.20833em;
+  margin: 1.5em 0 .2em; }
+
+h3.body-copy {
+  font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif;
+  font-weight: bold;
+  font-size: 1.0625em;
+  line-height: 1.47059em;
+  margin: 1.5em 0 0; }
+
+h4.body-copy {
+  font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif;
+  font-weight: normal;
+  font-style: italic;
+  font-size: 1.0625em;
+  line-height: 1.47059em;
+  margin: 1.5em 0 0; }
+
+p.body-copy {
+  font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif;
+  font-size: 1.0625em;
+  line-height: 1.47059em; }
+
+p.preamble-body-copy {
+  font-weight: bold;
+  font-family: "OpenSans", "Droid Sans", "DejaVu Sans", "Bitstream Vera Sans", sans-serif;
+  font-size: 1em;
+  line-height: 1.3125em; }
+
+h1.aside, .post #reply-title {
+  font-family: "OpenSans", "Droid Sans", "DejaVu Sans", "Bitstream Vera Sans", sans-serif;
+  font-size: 1em;
+  font-weight: bold;
+  line-height: 1.2;
+  border-bottom: #b5b5b5 1px solid;
+  margin: 0 0 .4em;
+  padding: 0 0 .2em; }
+
 .post article, .post .history, .post #comments {
   width: 74.5%;
   margin-right: 0;
@@ -47,7 +96,7 @@ aside {
   .post .meta .author {
     font-family: "OpenSans", "Droid Sans", "DejaVu Sans", "Bitstream Vera Sans", sans-serif;
     font-size: 0.875em;
-    margin-bottom: .2em; }
+    margin-bottom: .8em; }
     .post .meta .author img {
       margin-top: .5em;
       width: 100%;
@@ -85,6 +134,8 @@ aside {
     .post article .entry-meta li:first-child::after, .post article .entry-tags li:first-child::after {
       content: ": ";
       margin-right: .3em; }
+.post #reply-title {
+  margin-top: 1.5em; }
 
 .loop {
   margin-top: 0; }
