--- a/wp-content/themes/external-blogg/stylesheets/application.scss
+++ b/wp-content/themes/external-blogg/stylesheets/application.scss
@@ -1,8 +1,8 @@
-@import 'variables';
-@import 'mixins';
-@import 'functions';
-@import 'base';
-@import 'single';
-@import 'loop';
-@import 'aside';
-@import 'media-queries';
+@import 'variables',
+        'mixins',
+        'functions',
+        'grid',
+        'single',
+        'loop',
+        'aside',
+        'media-queries';
