--- a/wp-content/themes/external-blogg/stylesheets/application.scss
+++ b/wp-content/themes/external-blogg/stylesheets/application.scss
@@ -1,8 +1,10 @@
 @import 'variables',
         'mixins',
         'functions',
+        'extends',
         'grid',
         'single',
+        'comments',
         'loop',
         'aside',
         'media-queries';
