--- a/wp-content/themes/external-blogg/editor-style.css
+++ b/wp-content/themes/external-blogg/editor-style.css
@@ -46,70 +46,53 @@ th, td {
   vertical-align: top;
 }
 
+.alignright, .aligncenter {
+  float: right;
+  margin: .3em 0 1em 1em;
+  width: 42%;
+  height: auto;
+}
+
+.alignleft {
+  float: left;
+  margin: .3em 1em 1em 0;
+  width: 42%;
+  height: auto;
+}
+
+.alignnone {
+  float: none;
+  display: block;
+  clear: both;
+  margin: .3em 0 1em;
+  width: 100% !important;
+  height: auto;
+}
+.alignnone img {
+  width: 100%;
+  height: auto;
+}
+
+.featured-image {
+  float: right;
+  width: 42%;
+  margin: .3em 0 1em 1em;
+}
+
+.featured-image .caption, .wp-caption .wp-caption-text {
+  font-family: "OpenSans","Verdana","DejaVu Sans","Bitstream Vera Sans",sans-serif;
+  font-size: 14px;
+  margin-bottom: 0;
+}
+
+.featured-image img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 0.2em !important;
+}
+
 img {
-	margin: 0;
-	max-width: 640px;
-}
-.alignleft,
-img.alignleft {
-	display: inline;
-	float: left;
-	margin-right: 24px;
-	margin-top: 4px;
-}
-.alignright,
-img.alignright {
-	display: inline;
-	float: right;
-	margin-left: 24px;
-	margin-top: 4px;
-}
-.aligncenter,
-img.aligncenter {
-	clear: both;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-}
-img.alignleft,
-img.alignright,
-img.aligncenter {
-	margin-bottom: 12px;
-}
-.wp-caption {
-	background-color: #fff;
-  border: none;
-  border-radius: 0;
-  margin: 0 0 10px 0;
-  padding: 0;
-  text-align: left;
-}
-.wp-caption .wp-caption-dd {
-	border: none;
-	background: #fff;
-	color: #000 !important;
-	font-family: "OpenSans","Verdana","DejaVu Sans","Bitstream Vera Sans",sans-serif;
-  font-size: 0.8125em;
-	line-height: 18px;
-	text-align: left;
-	margin-bottom: 4px;
-	padding: 0;
-	-moz-border-radius: 0;
-	-khtml-border-radius: 0;
-	-webkit-border-radius: 0;
-	border-radius: 0;
-}
-.wp-caption .wp-caption-dt {
-	line-height: 1em;
-}
-.wp-caption img {
-	margin: 0;
-}
-.wp-caption p.wp-caption-text {
-	margin: 0 0 4px;
-}
-.wp-smiley {
-	margin:0;
+  max-width: 100%;
 }
 
 /* .body-copy */
@@ -144,6 +127,7 @@ h4 {
 p {
   font-size: 17px;
   line-height: 25px;
+  margin-top: 0;
 }
 p.preamble {
   font-weight: bold;
