Loop title styles

--- a/wp-content/themes/external-blogg/stylesheets/loop.scss
+++ b/wp-content/themes/external-blogg/stylesheets/loop.scss
@@ -1,5 +1,8 @@
 .loop {
   margin-top: 0;
+  h1.page-title {
+    @extend h1.body-copy;
+  }
   .post {
     @include clearfix();
     margin-bottom: 1.5em;
