--- a/wp-content/themes/external-blogg/stylesheets/application.css
+++ b/wp-content/themes/external-blogg/stylesheets/application.css
@@ -1,4 +1,4 @@
-h1.body-copy {
+h1.body-copy, .loop h1.page-title {
   font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif;
   font-weight: normal;
   font-size: 2.25em;
