--- a/wp-content/themes/external-blogg/stylesheets/application.css
+++ b/wp-content/themes/external-blogg/stylesheets/application.css
@@ -1,16 +1,20 @@
 h1.body-copy, .loop h1.page-title {
-  font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif;
   font-weight: normal;
   font-size: 2.25em;
   line-height: 1.11111em;
   margin: 0 0 .3em; }
+  @media (max-width: 26em) {
+    h1.body-copy, .loop h1.page-title {
+      font-size: 1.75em; } }
 
-h2.body-copy {
-  font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif;
+h2.body-copy, .loop .post h1 {
   font-weight: normal;
   font-size: 1.5em;
   line-height: 1.20833em;
   margin: 1.5em 0 .2em; }
+  @media (max-width: 26em) {
+    h2.body-copy, .loop .post h1 {
+      font-size: 1.375em; } }
 
 h3.body-copy {
   font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif;
@@ -77,6 +81,17 @@ aside {
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
+@media (max-width: 50em) {
+  main, aside {
+    width: 100%;
+    margin-right: 2%;
+    margin-right: 0;
+    float: none;
+    float: left;
+    -ms-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box; } }
 .single .post .article-and-comments {
   width: 74%;
   margin-right: 0;
@@ -244,9 +259,9 @@ aside {
     .loop .post:after {
       clear: both; }
     .loop .post h1 {
-      font-size: 1.5em; }
+      margin-top: 0; }
     .loop .post .body-copy {
-      width: 74.5%;
+      width: 74.25%;
       margin-right: 0;
       float: left;
       -ms-box-sizing: border-box;
@@ -259,8 +274,8 @@ aside {
         font-family: "OpenSans", "Droid Sans", "DejaVu Sans", "Bitstream Vera Sans", sans-serif;
         font-size: 0.875em; }
     .loop .post .entry-meta {
-      width: 23.5%;
-      margin-right: 2%;
+      width: 22.75%;
+      margin-right: 3%;
       float: left;
       -ms-box-sizing: border-box;
       -webkit-box-sizing: border-box;
@@ -321,23 +336,26 @@ aside .latest-posts .featured-image {
     margin-top: 0.25em;
     width: 100%;
     height: auto; }
-aside .latest-posts p {
+aside .latest-posts .text {
   width: 73.75%;
   margin-right: 0;
   float: left;
   -ms-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  line-height: 1.3;
-  font-size: 0.92857em;
-  font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif; }
-  aside .latest-posts p time {
+  box-sizing: border-box; }
+  aside .latest-posts .text h2 {
+    font-size: 0.92857em;
+    line-height: 1.3;
+    font-family: Georgia, "Droid Serif", "DejaVu Serif", "Bitstream Vera Serif", serif;
+    font-weight: normal;
+    margin: 0; }
+  aside .latest-posts .text time {
     clear: both;
     display: block;
     margin-top: .2em;
     font-family: "OpenSans", "Droid Sans", "DejaVu Sans", "Bitstream Vera Sans", sans-serif;
-    font-size: 0.92308em; }
+    font-size: 0.85714em; }
 aside .widget-area {
   margin: 0 0 2em; }
   aside .widget-area p {
@@ -346,3 +364,39 @@ aside .widget-area {
     line-height: 1.4;
     margin: 0 0 1em;
     clear: both; }
+
+@media (max-width: 50em) {
+  aside .latest-posts .featured-image {
+    width: 14.16667%;
+    margin-right: 3%;
+    float: left;
+    -ms-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box; }
+    aside .latest-posts .featured-image img {
+      margin-top: 0.375em; }
+  aside .latest-posts .text {
+    width: 82.83333%;
+    margin-right: 0;
+    float: left;
+    -ms-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box; }
+    aside .latest-posts .text h2 {
+      font-size: 1.35714em; } }
+@media (max-width: 26em) {
+  aside .latest-posts .text h2 {
+    font-size: 1.07143em; } }
+@media (max-width: 50em) {
+  .meta .entry-tags, .meta .entry-meta {
+    margin-bottom: .5em; }
+  .meta .author-avatar img {
+    clear: both;
+    float: none;
+    margin: 0; }
+  .meta .author-avatar .author {
+    clear: both;
+    float: none;
+    text-align: left; } }
