--- a/wp-content/themes/external-blogg/stylesheets/aside.scss
+++ b/wp-content/themes/external-blogg/stylesheets/aside.scss
@@ -27,17 +27,21 @@ aside {
         height: auto;
       }
     }
-    p {
+    .text {
       @include columns(9, true, 5%);
-      line-height: 1.3;
-      font-size: emize(13, 14);
-      font-family: $serif;
+      h2 {
+        font-size: emize(13, 14);
+        line-height: 1.3;
+        font-family: $serif;
+        font-weight: normal;
+        margin: 0;
+      }
       time {
         clear: both;
         display: block;
         margin-top: .2em;
         font-family: $sansSerif;
-        font-size: emize(12, 13);
+        font-size: emize(12, 14);
       }
     }
   }
@@ -50,6 +54,35 @@ aside {
       line-height: 1.4;
       margin: 0 0 1em;
       clear: both;
+    }
+  }
+}
+
+@media (max-width: 50em) {
+  aside .latest-posts {
+    .featured-image {
+      @include columns(2, false, 3%);
+      img {
+        margin-top: emize(6);
+      }
+    }
+    .text {
+      @include columns(10, true, 3%);
+      h2 {
+        font-size: emize(19, 14);
+      }
+      time {
+      }
+    }
+  }
+}
+
+@media (max-width: 26em) {
+  aside .latest-posts {
+    .text {
+      h2 {
+        font-size: emize(15, 14);
+      }
     }
   }
 }
