--- a/wp-content/themes/external-blogg/stylesheets/grid.scss
+++ b/wp-content/themes/external-blogg/stylesheets/grid.scss
@@ -12,3 +12,9 @@ main {
 aside {
   @include columns(3, true, 5%);
 }
+
+@media ( max-width: 50em ) {
+  main, aside {
+    @include columns(12);
+  }
+}
