--- a/wp-content/themes/external-blogg/stylesheets/media-queries.scss
+++ b/wp-content/themes/external-blogg/stylesheets/media-queries.scss
@@ -1,22 +1,22 @@
-@media ( max-width: 50em ) {
-  .meta {
-    .entry-tags, .entry-meta {
-      margin-bottom: .5em;
-    }
-    .author-avatar {
-      img {
-        clear: both;
-        float: none;
-        margin: 0;
-      }
-      .author {
-        clear: both;
-        float: none;
-        text-align: left;
-      }
-    }
-  }
-}
+// @media ( max-width: 50em ) {
+//   .meta {
+//     .entry-tags, .entry-meta {
+//       margin-bottom: .5em;
+//     }
+//     .author-avatar {
+//       img {
+//         clear: both;
+//         float: none;
+//         margin: 0;
+//       }
+//       .author {
+//         clear: both;
+//         float: none;
+//         text-align: left;
+//       }
+//     }
+//   }
+// }
 // @media ( max-width: 32em ) {
 //   .post {
 //     article.body-copy, .history, #comments, .meta {
